<resources>
    <string name="semicolon">""</string>
    <string name="camera_loading">"Please wait while the camera is loaded...... "</string>
    <string name="camera_loading_prompt">"1. this machine tachograph default boot automatically start recording mark: in the recorder preview interface main interface of the upper left corner 'and' is recording a size of alternating red flashing, if not in a red dot size alternately flashing recorder interface machine top left corner the status bar will, if not more than imagine please check the recorder or the recorder of the SD card.\r\n2. driving recorder, the speed is too fast when the preview screen may appear a little Caton phenomenon, but does not affect the effect of photographing and recording, please rest assured that the use of. We are optimizing this phenomenon, and will automatically update the version, if you have any comments or suggestions can be returned to us, your support is our greatest motivation"</string>
    <string name="update_error">"Software update error, please try again later"</string>
    <string name="image_loading_fail">"Failed to load. Please try again when you make sure the file is present"</string>
    <string name="install">"Install"</string>
    <string name="app_info_def">"Unknown"</string>
    <string name="non_writable">"SD cannot write the recorder"</string>
    <string name="file_is_loading">"Downloading now"</string>
    <string name="download_complete">"Download complete."</string>
    <string name="continue_loading">"Continue downloading"</string>
    <string name="new_software_messages">"The latest version: V@V \n\n content: @M \n\n upgrade package size: @S \n\n, recommended in WiFi environment updates"</string>
    <string name="new_software_toup">"Update now, @ later"</string>
    <string name="new_software">"Discovery of new software"</string>
    <string name="latest_version">"Currently is the latest version."</string>
    <string name="netword_check_faile">"The connection network is timed out. Please try again later"</string>
    <string name="netword_check_is_has_up">"Checking, please wait a moment......"</string>
    <string name="netword_abnormal">"Network suck, please check the network environment"</string>
    <string name="check_no_fyt_dvr">"This software only supports the FYT series of vehicle recorders. Please insert the FYT type recorder"</string>
    <string name="dvr_unavailable">"The recorder cannot be used"</string>
    <string name="about_software">"About software"</string>
    <string name="about_software_message">"Note: this software in the city of Shenzhen Yitong science and technology, only ETS tachograph.\n\n version support series: tachograph models supported by \n\n: \n *@ @#"</string>
    <string name="space_is_full">"The storage space is full"</string>
    <string name="str_card_error">"SD card error"</string>
    <string name="shake_failed">"The handshake failed to detect the logger"</string>
    <string name="operation_failed">"Operation failed. Please try again later"</string>
    <string name="the_official_website">"Official website"</string>
    <string name="version_update">"Version update"</string>
    <string name="system_is_low">"System version is too low"</string>
    <string name="system_low_message">"The car engine system version is too low to use the recorder properly. Please upgrade the system version first"</string>
    <string name="mode_switch_failure">"Mode switch failed. Please try again later"</string>
    <string name="no_supplier">"The current recorder does not match the car, so it cannot be used. Please contact the relevant vehicle suppliers"</string>
    <string name="usb_low">"The USB protocol does not support it"</string>
    <string name="switch_usb">"The current USB protocol is 1.1. This protocol does not support the logger function. Please switch the USB protocol to 2"</string>
    <string name="remote_operation">"Remote operation is being performed. Please close this interface for thirty seconds"</string>
    <string name="app_name">"DVR"</string>
	<string name="str_playback">"Record playback"</string>
	<string name="str_record_begin">"Recording opens."</string>
	<string name="str_setting">"Settings"</string>
	<string name="str_please_seletime">"Please select date"</string>
    <string name="start_record">"Recording"</string>
    <string name="stop_record">"Stop!"</string>
    <string name="quit_Camcorder">"Quit application"</string>
    <string name="str_text_delete_video">"Delete"</string>
    <string name="max_duration">"A single file is long"</string>
    <string name="storage_size">"Record file size"</string>
    <string name="recoder_profile">"Recording resolution"</string>
     <string name="str_frame_rate">"Recorded frames per second"</string>
    <string name="str_tip_title">"Friendship tips."</string>
    <string name="str_tip_sure">"Sure."</string>
    <string name="str_format_title">"Format SD card"</string>
    <string name="str_format_message">"Are you sure you want to format SD card? "</string>
    <string name="str_format_title_two">"Formatting SD card"</string>
    <string name="str_clear_all_setting">"Do you want to clear all settings?"</string>
    <string name="str_format_message_two">"This operation will delete all files on the SD card and cannot be recovered. Do you want to proceed?"</string>
    <string name="str_tip_cancle">"Cancel"</string>
	<string name="str_text_point">"Point"</string>
    <string name="str_btn_back">"Return"</string>
    <string name="str_btn_sure">"Confirm"</string>
    <string name="str_text_nodata">"There is no data for this day."</string>
    <string name="str_dialog_title">"</string>
    <string name="str_dialog_message">"Editing. Make sure you quit editing."</string>
    <string name="str_text_lock">"The photo storage space is full"</string>
     <string name="str_text_flock">"The locked file is full. Please delete it manually"</string>
    <string name="str_not_supported">"This camera device is not supported by the system"</string>
    <string name="str_not_start_failed">"Camera abnormal, recording failed"</string>
    <string name="str_file_islock_dele">"The current file is locked. Are you sure you want to delete it?"</string>
    <string name="str_file_islock_video">"The recording file is locked"</string>
    <string name="recording_tips">"Recording now."</string>
    <string name="i2c_error">"I2C communications exception"</string>
    <string name="check_failure">"Encrypted checksum failed"</string>
    <string name="str_dvr_handler">"You operate too frequently and data is being processed"</string>
    <string name="str_dvr_isbackcar">"In reverse condition, do not hold for 10 seconds."</string>
    <string name="str_dvr_isplayvideo">"Video playback status is prohibited for 10 seconds"</string>
    <string name="str_dvr_Bt_isuse">"Bluetooth usage is prohibited"</string>
    <string name="str_dvr_recoding_error">"Recording error"</string>
    <string name="str_needs_stop_record">"To execute this instruction, video recording must be stopped first"</string>
    <string name="str_bg_record">"DVR is recording"</string>
    <string name="str_dvr_lock">"Please have video recording first."</string>
    <string name="file_mode">"File mode"</string>
    <string name="calendar_mode">"Calendar mode"</string>
    <string name="playback_mode">"Please select replay mode:"</string>
    <string name="loading_fail">"File loading failed. Please check SD card"</string>
    <string name="setting_camera">"Settings, please wait a minute."</string>
    <string name="factory_settings">"The factory settings are being restored. Please wait a moment"</string>
    <string name="factory_settings_fish">"Restore factory settings completed."</string>
    <string name="no_camera">"No vehicle recorder"</string>
    <string name="purchasea_dvice">"The FYT300_USB device is not detected. Please make sure that the correct equipment is connected. If you need to purchase please contact the dealer or contact @# purchase consulting"</string>
    <string name="time_setting">"Recurring video time:"</string>
    <string name="one_minute">"One minute"</string>
    <string name="five_minute">"Five minutes."</string>
    <string name="three_minute">"Three minutes."</string>
    <string name="preview_resolution_setting">"Record video resolution:"</string>
	<string name="fromat_sd_card">"Format SD card"</string>
	<string name="fromat_sd_finish">"Format SD card complete"</string>
    <string name="sunday">"Sunday"</string>
     <string name="monday">"Monday"</string>
     <string name="tuesday">"Tuesday"</string>
     <string name="wednesday">"Wednesday"</string>
     <string name="thursday">"Thursday"</string>
     <string name="friday">"Friday"</string>
     <string name="saturday">"Saturday"</string>
 	<string name="str_text_data">"Day"</string>
    <string name="str_text_month">"The month"</string>
     <string name="str_text_year">"Year"</string>
    <string name="str_text_delete">"Delete"</string>
    <string name="str_text_edit">"Edit"</string>
    <string name="str_text_allsele">"Select all"</string>
    <string name="str_text_video">"Video"</string>
    <string name="str_text_adbum">"Album"</string>
    <string name="str_text_photo">"Take pictures."</string>
    <string name="str_text_photo_fail">"Photo failure"</string>
    <string name="str_camera_exit">"The drive recorder has been removed or unavailable"</string>
    <string name="str_text_start_audo">"Audio recording"</string>
    <string name="str_text_format_sdcard">"Format SD card"</string>
    <string name="str_text_factory_setting">"Restore factory settings"</string>
    <string name="system_upgrade">"Please copy the upgrade package to the root of the driving record SD card. Please do not switch off during the upgrade"</string>
    <string name="str_system_upgrade">"System upgrade"</string>
    <string name="str_version_information">"Version information"</string>
   <string name="str_text_collision">"Emergency video lock sensitivity:"</string>
   <string name="photo_resolution">"Photo resolution:"</string>
   <string name="flicker_frequency">"Flicker frequency:"</string>
   <string name="wide_dynamic">"Wide dynamic"</string>
   <string name="strobe">"Strobe:"</string>
  <string name="str_collision_low">"Low"</string>
  <string name="str_collision_in">"In"</string>
  <string name="str_collision_high">"High"</string>
  <string name="str_collision_close">"Shut down"</string>
    <string name="str_start_recorder">"Start recording"</string>
    <string name="str_stop_recorder">"Stop recording"</string>
    <string name="str_tip_no_sdcard">"No SD card or SD card is unavailable"</string>
     <string name="str_no_sdcard_out_play">"The drive logger" SD "has been removed or unavailable. It will exit the file edit playback mode"</string>
    <string name="str_tip_is_recording">"Recording now"</string>
    <string name="str_low_speed_card">"The SD card is a low speed card. Please use the class10 high-speed card"</string>
    <string name="str_load_sysfile">"Loading SD card file system"</string>
    <string name="str_noti_title">"Vehicle recorder"</string>
    <string name="str_tip_not_enough_storage">"There is insufficient storage space. Please clear up the relevant data"</string>
    <string name="str_add_file">"Loading, please wait a moment....... "</string>
    <string name="str_delete_file">"Deleting, please wait a moment...... "</string>
    <string name="str_delete_all_file">"Are you sure you want to delete all data? "</string>
    <string name="str_load_success">"The SD card loading is completed"</string>
     <string name="data_add">"Loaded...... "</string>
     <string name="pref_camera_color_effect_default">none</string>
     <string name="pref_camera_whitebalance_default">auto</string>
</resources>