<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:apps="http://schemas.android.com/apk/res/com.syu.dvr"
    android:layout_width="match_parent"
    android:id="@+id/scrollview_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:scrollbars="none"
    android:layout_marginLeft="150dp"
    android:layout_marginRight="150dp"
    android:layout_marginBottom="70dp"
    android:layout_marginTop="70dp"
    android:orientation="vertical" >
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
		 <com.syu.dvr.widget.TimeSetting
		 android:id="@+id/time_setting_layout"
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.AudoSetting
		 android:id="@+id/audo_setting_layout"     
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.SettingButton
		 android:id="@+id/format_title_layout"    
         apps:text="@string/str_format_title"
         apps:cmdtyple="0"
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.SettingButton
		 android:id="@+id/factory_setting_layout"     
         apps:text="@string/str_text_factory_setting"
         apps:cmdtyple="3"
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.CollisionSetting
		 android:id="@+id/collision_setting_layout"
         style="@style/settings_style"/>
		  <com.syu.dvr.widget.HdrSetting
		 android:id="@+id/hdr_setting_layout"
         style="@style/settings_style"/>
		  <com.syu.dvr.widget.SettingButton
		 android:id="@+id/system_upgrade_layout"    
         apps:text="@string/str_system_upgrade"
         apps:cmdtyple="4"
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.ResolutionSetting
		 android:id="@+id/resolution_setting_layout"
         style="@style/settings_style"/>
		  <com.syu.dvr.widget.SettingButton
		 android:id="@+id/version_information_layout"     
         apps:text="@string/str_version_information"
         apps:cmdtyple="5"
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.StrobeSetting
		 android:id="@+id/strobe_setting_layout"    
         style="@style/settings_style"/>
		 <com.syu.dvr.widget.SettingButton
		 android:id="@+id/about_software_layout" 
		 apps:cmdtyple="6"   
         apps:text="@string/about_software"
         style="@style/settings_style"/>
   </LinearLayout>
 
</ScrollView>

